Scrollbar fixes for Chrome

--- a/src/fe-app/src/app/main/main.component.css
+++ b/src/fe-app/src/app/main/main.component.css
@@ -66,6 +66,10 @@
   box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.3);
 }
 
+.main-view::-webkit-scrollbar {
+  display: none;
+}
+
 router-outlet {
   display: contents;
 }
